// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HybridCard1 should render is-read correctly 1`] = `
<div>
  <article
    class="hybridCard1 isRead xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 1`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 2`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 3`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 4`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 5`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 6`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 7`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render themes correctly 8`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard1 should render variant-1 correctly 1`] = `
<div>
  <article
    class="hybridCard1 xs__p+4 s__p-0"
    data-variant="variant-1"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="s__p-0 s__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <img
            alt="This is the caption"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption>
          This is the caption
        </figcaption>
      </figure>
      <div
        class="teaserText  xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s xs__m-0 xs__mt+2"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
  </article>
</div>
`;
